# kikuo

./: .env.example  .gitignore  INSTALL.md  QUICKSTART.md  README.md  Voice_Generator_Colab.ipynb  app.py  gemini_dialogue.py  pyproject.toml  requirements.txt
samples/: test_dialogue.txt
scripts/: sample_dialogue.txt  sample_narration.md
src/: __init__.py  agent.py  main.py
src/audio/: __init__.py  processor.py  track_builder.py
src/readers/: __init__.py  google_docs.py  script_parser.py  word.py
src/tts/: __init__.py  gemini_tts.py  google_tts.py  voice_manager.py
src/utils/: __init__.py  config.py
